--- a/Mvvm_Example/MVVM_Example_dotnet6/MainWindow.xaml
+++ b/Mvvm_Example/MVVM_Example_dotnet6/MainWindow.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <DockPanel>
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_New" />
+                    <MenuItem Header="_Open" />
+                    <MenuItem Header="_Save" />
+                    <Separator />
+                    <MenuItem Header="_Exit" />
+                </MenuItem>
+            </Menu>
+            <Frame />
+        </DockPanel>
     </Grid>
 </Window>
