--- a/Mvvm_Example/MVVM_Example_dotnet6/App.xaml
+++ b/Mvvm_Example/MVVM_Example_dotnet6/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:MVVM_Example_dotnet6"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/styles/_ConverterRd.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
