--- a/Mvvm_Example/MVVM_Example_dotnet6/views/HomePage.xaml
+++ b/Mvvm_Example/MVVM_Example_dotnet6/views/HomePage.xaml
@@ -6,10 +6,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"  
     Title="HomePage">
-    <Grid>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <StackPanel>
             <TextBlock FontSize="20" Text="{Binding Title}" />
             <TextBlock Text="{Binding Message}" />
+        </StackPanel>
+
+        <StackPanel Grid.Column="1">
+            <Button Command="{Binding BusyTestCommand}" Content="Busy Test" />
         </StackPanel>
     </Grid>
 </Page>
