--- a/Mvvm_Example/MVVM_Example_dotnet6/MainWindow.xaml
+++ b/Mvvm_Example/MVVM_Example_dotnet6/MainWindow.xaml
@@ -24,14 +24,34 @@
                 <MenuItem Header="_Code Management" />
                 <MenuItem
                     Command="{Binding NavigateCommand}"
-                    CommandParameter="views/CustomPage.xaml"
+                    CommandParameter="Views/CustomerPage.xaml"
                     Header="C_ustomer Management" />
             </MenuItem>
         </Menu>
-        <Frame NavigationUIVisibility="Hidden">
-            <b:Interaction.Behaviors>
-                <behaviors:FrameBehavior NavigationSource="{Binding NavigationSource, Mode=TwoWay}" />
-            </b:Interaction.Behaviors>
-        </Frame>
+        <Grid>
+            <Frame NavigationUIVisibility="Hidden">
+                <b:Interaction.Behaviors>
+                    <behaviors:FrameBehavior NavigationSource="{Binding NavigationSource, Mode=TwoWay}" />
+                </b:Interaction.Behaviors>
+            </Frame>
+            <Border Background="#66000000" Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}">
+                <Border
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="White"
+                    CornerRadius="5">
+                    <StackPanel Width="100" Margin="10">
+                        <ProgressBar Height="10" IsIndeterminate="True" />
+                        <TextBlock
+                            Margin="0,5,0,0"
+                            HorizontalAlignment="Center"
+                            Text="Busy..." />
+                    </StackPanel>
+                    <Border.Effect>
+                        <DropShadowEffect />
+                    </Border.Effect>
+                </Border>
+            </Border>
+        </Grid>
     </DockPanel>
 </Window>
